# ssh-config-enhance-rs

./: .gitignore  Cargo.toml  GUI_DEVELOPMENT_PLAN.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/components/: ServerList.vue
