[package]
name = "ssh-config-enhance"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"  # Tauri构建依赖

[dependencies]
regex = "1.5"
prettytable-rs = "0.10"
clap = { version = "4.5", features = ["derive", "string"] }
directories = "6.0"
crossterm = "0.29"
ctrlc = "3.0"
tauri = { version = "2.5"}  # Tauri主依赖
serde = { version = "1.0", features = ["derive"] }  # 序列化支持
