[package]
name = "ssh-config-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-shell = "2"
serde_json = "1.0"
ssh-config-enhance = { path = ".." }
tauri-plugin-devtools = "2.0.0"
log = "0.4"
tauri-plugin-log = "2.4.0"
